String.format(), mbti, switch 표현식